2.0-rc1

* Group "other" user dashboard issues by project
* Added issues, milestones and userdashboard endpoints to the available APIs
* Add Gradle project support
* Add QR codes for easier access to app install links

* Fix issue where time logged when resolving an issue was not being saved
* Fix issue where eclipse android projects could not reference local libraries
* Issue:57 Random ordering of durationworkeds if times match
* Various DB optimisations
* Issue:55 Include build config name in artefact upload events and build events
* Correct encoding of JSON API (to UTF-8)
* Correct rendering of file sizes to IEC standards
* Fix an issue with the file "updates" page hanging


2.0-beta4

* Add a grouped history page for better visibility of which apps are active
* Better security by hiding email and telephone details from anonymous views
* Deffer (once) builds of maven projects that have a dependency also in the build queue
* Add "never" option to build schedules
* Don't forget the project when displaying an error page
* Issue:42 Filter search results by application

* Fixed marked up text to render URLs as links
* Fix some issues with memory constraints when updating
* Fix possible crashes with the system if setup is not complete
* Improvements to document edit styling to better match document view styles
* Fix issue with hour remaining calculations
* Fix some errors with milestone exports
* Issue:38 Attach comments to attachments when adding a file
* Fix 'NaN' velocity rendering errors
* Issue:41 Filter milestones in milestone group edit page

2.0-beta3

* Support building of Xcode 4 workspaces
* Add build schedule names and allow execution of each configuration in the build page
* Dynamically update workspaces where CocoaPods are used for Xcode projects
* Support for setting tasks on an ant build
* Build Android apps using ant to avoid eclipse issues
* Created a simple JSON API framework
* Update navigation on mobile to fit on smaller screens